--- a/style.css
+++ b/style.css
@@ -2,7 +2,15 @@
     margin: 0;
 }
 
-.knapper {
+
+
+input[type="text"] {
+    width: 100%;
+    padding: 5px;
+    font-size: 20px;
+}
+
+.calc {
     height: 100vh;
     width: 100vw;
     display: flex;
