--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
     margin: 0;
 }
 
+#container{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 
 input[type="text"] {
@@ -10,12 +19,15 @@ input[type="text"] {
     font-size: 20px;
 }
 
-.calc {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+h1{
+    text-align: center;
+}
+
+ul {
+    height: 356px;
+    width: 272px;
+    list-style: none ;
+    overflow: auto;
 }
 
 .row-container {
@@ -60,5 +72,7 @@ input[type="text"] {
     width: 75px;
     height: 50px;
 }
+
+
 
 
